2019-03-29 James Phillips <james@jamesphillipsuk.com>
	*main.c: printFile() now uses our textFile, and nothing is printed directly to the screen from the file without being saved in the textFile first.
	Aviate now takes argv parameters from the user regardless of whether or not they capitalise the first letter.
	Moved the declaration of the textFile used when reading a file, so it can be used for altering a file as well.
	Done the same for when writing a file.
	Created function saveFile() for saving a file.  Not yet implemented.
	Began to frame out how rewriteFile() will be used.
	Added initialiseTextFile() to ensure the structure which holds our file is always initialised and stop any malloc()ing bugs.
	saveFile() now uses write access.
	rewriteFile() now writes text to the file.  For now, it just writes "Hello, World!" - but that'll change soon.

	*CHANGELOG: Documented recent changes.

2019-03-28 James Phillips <james@jamesphillipsuk.com>
	*main.c: Added typedef and struct for handling text files, called "textFile".
	Implemented textFile in printFile() to copy the file to the struct.
	
	*CHANGELOG: Documented recent changes.
	
	2019-03-27 James Phillips <james@jamesphillipsuk.com>
	*main.c: Added further code documentation.
	Fixed some dates.
	Added overwrite protection to file writing.
	
	*CHANGELOG: Documented recent changes.

	*.gitignore: Added .gitignore

2018-12-12 James Phillips <james@jamesphillipsuk.com>
	*main.c: Added functions to handle terminal args.

	*README.md: Rewrote sections on use and bug tracking.
	
	*CHANGELOG: Documented recent changes.
	
2018-12-11 James Phillips <james@jamesphillipsuk.com>
	*main.c: Begin total rewrite of the code.

	*main.c.old: Moved legacy code to main.c.old for documentation and reference.
	
	*CHANGELOG: Documented recent changes.

2017-03-12 James Phillips <james@jamesphillipsuk.com>
	*main.c: Altered typo in initial comment block and drawintroproc (The Project started in April, not March).